# composition

./: .gitignore  LICENSE  composition.cabal  stack.yaml
src/Data/: Composition.hs
