name:                composition
version:             1.0.2.2
synopsis:            Combinators for unorthodox function composition

license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
bug-reports:
  https://github.com/DanBurton/composition/issues

category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Data.Composition
  default-extensions:  NoImplicitPrelude
  if(impl(ghc >= 10.1))
    -- removes the implicit dependency on GHC.Essentials
    -- (we'd need a dependency on base to satisfy it otherwise)
    ghc-options: -frebindable-known-names

source-repository head
  type:     git
  location: git://github.com/DanBurton/composition.git
