name:                composition
version:             2.0
synopsis:            Combinators for unorthodox function composition
description:
  Just a silly library for composing functions.
  If anyone takes this package seriously,
  please explain to me why.

license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
bug-reports:
  https://github.com/DanBurton/composition/issues

category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Data.Composition
  build-depends:       base >=0 && < 9
